<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/chat"
        android:title="Chat"
        android:icon="@drawable/chat"/>
    <item android:id="@+id/enrolled"
        android:title="My Courses"
        android:icon="@drawable/enrolled" />
    <item android:id="@+id/classes"
        android:title="Classes"
        android:icon="@drawable/classes" />
    <item android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/user" />
</menu>